# CommiPiste

./: .gitignore  LICENSE  README.md  example.html  pyproject.toml
CommiPiste/: __init__.py  cli.py  config.py  dbfetch.py  hashing.py  models.py  report.py  report_html.py  update.py
CommiPiste/detector/: __init__.py  active.py  banner.py  dependents.py  fetcher.py  matcher.py  scan.py
CommiPiste/indexer/: __init__.py  builder.py  repo.py  walker.py  wporg.py
CommiPiste/registry/: __init__.py  loader.py
CommiPiste/registry/builtin/: platforms.yaml
CommiPiste/storage/: __init__.py  base.py  sqlite.py
CommiPiste/vuln/: __init__.py  cvedb.py  cvss.py  merge.py  nvd.py  osv.py
docker/: README.md  docker-compose.yml  run_e2e.py
docs/: ARCHITECTURE.md  CATALOG.md  active-probing.md  database.md  how-it-works.md  supported.md  testing.md  troubleshooting.md  usage.md  vulnerabilities.md
scripts/: discover.py  gen_catalog.py  publish-db.sh
tests/: conftest.py  test_active_probe.py  test_autoindex.py  test_banner_false_positives.py  test_core.py  test_cvedb.py  test_dbfetch.py  test_e2e_docker.py  test_e2e_instances.py  test_matcher_clusters.py  test_report_and_banner_fixes.py  test_report_html.py  test_scan_http.py  test_update.py  test_vuln.py  test_vuln_sources.py
