[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CommiPiste"
version = "0.1.0"
description = "OSINT tool for precise version fingerprinting of open-source web software via git blob OID"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "soxoj" }]
keywords = ["osint", "fingerprinting", "security", "cve", "version-detection", "git"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "aiosqlite>=0.20",
    "PyYAML>=6.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "pytest-httpserver>=1.0"]

[project.urls]
Homepage = "https://github.com/soxoj/CommiPiste"
Repository = "https://github.com/soxoj/CommiPiste"
Issues = "https://github.com/soxoj/CommiPiste/issues"

[project.scripts]
CommiPiste = "CommiPiste.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["CommiPiste"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
